# LLM_based_drug_dev_orchestration

./: create_user.sh  db_setup.py  hyperdesignAgent.py  pdf_parsing.py  pyproject.toml  requirements.txt
data/json/: Alfehaid et al. - 2024 - Drug-Drug Interactions and the Clinical Tolerability of Colchicine Among Patients With COVID-19.json  Bursch et al. - 2024 - Current Trends in Sirtuin Activator and Inhibitor Development.json  Chimenti et al. - 2018 - A Mechanism-Based Approach to Physical Therapist Management of Pain.json  Deodhar et al. - 2020 - Mechanisms of CYP450 Inhibition Understanding Drug-Drug Interactions Due to Mechanism-Based Inhibit.json  Duque et al. - 2017 - Physiological markers of motor inhibition during human behavior.json  Garcia-Molina et al. - 2022 - The Relationship between the IC50 Values and the Apparent Inhibition Constant in the Study of Inhibi.json  Ghosh et al. - 2022 - Cytochrome P450-mediated antiseizure medication interactions influence apoptosis, modulate the brain.json  Guan et al. - 2018 - Biophysical characterization of hit compounds for mechanism-based enzyme activation.json  Hakkola et al. - 2020 - Inhibition and induction of CYP enzymes in humans an update.json  Hendry et al. - 2022 - Development of directed global inhibition, competitive inhibition and behavioural inhibition during.json  Hermann et al. - 2021 - Polypharmacy and Potential Drug–Drug Interactions in Home-Dwelling Older People – A Cross-Sectional.json  Kerrén et al. - Phase separation of competing memories along the human hippocampal theta rhythm.json  (+11 more)
(+23 files in other folders)
