[project]
name = "LLM_based_drug_dev_orchestration"
version = "0.1.0"
description = ""
authors = [
    {name = "acuacal"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "transformers (>=4.47.1,<5.0.0)",
    "faiss-cpu (>=1.9.0.post1,<2.0.0)",
    "sentence-transformers (>=3.3.1,<4.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "docling (>=2.15.0,<3.0.0)",
    "pymilvus (>=2.5.3,<3.0.0)",
    "milvus (==2.3.5)",
    "pydantic (>=2.10.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
